tp2/fonctionnalBrainfuck/bfParser.java
// Generated from bf.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class bfParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, IDENTIFICATEUR=36, NUMBER=37, 
		WS=38;
	public static final int
		RULE_program = 0, RULE_funcDef = 1, RULE_declarationVar = 2, RULE_type = 3, 
		RULE_constante = 4, RULE_funcName = 5, RULE_id = 6, RULE_expre = 7, RULE_instruct = 8, 
		RULE_accesTab = 9, RULE_func = 10, RULE_procedure = 11, RULE_exprLA = 12, 
		RULE_or = 13, RULE_and = 14, RULE_ene = 15, RULE_ltgt = 16, RULE_additionExpr = 17, 
		RULE_multiplyExpr = 18, RULE_atomExpr = 19;
	public static final String[] ruleNames = {
		"program", "funcDef", "declarationVar", "type", "constante", "funcName", 
		"id", "expre", "instruct", "accesTab", "func", "procedure", "exprLA", 
		"or", "and", "ene", "ltgt", "additionExpr", "multiplyExpr", "atomExpr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'var'", "'('", "')'", "':'", "'integer'", "'boolean'", "'array of'", 
		"'true'", "'false'", "'read'", "'write'", "'new array of'", "'['", "']'", 
		"':='", "'if'", "'then'", "'else'", "'while'", "'do'", "'skip'", "';'", 
		"'or'", "'and'", "'='", "'!='", "'<'", "'<='", "'>='", "'>'", "'+'", "'-'", 
		"'*'", "'/'", "'not'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"IDENTIFICATEUR", "NUMBER", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "bf.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public bfParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program value;
		public DeclarationVarContext dv;
		public FuncDefContext f;
		public InstructContext i;
		public InstructContext instruct() {
			return getRuleContext(InstructContext.class,0);
		}
		public List<FuncDefContext> funcDef() {
			return getRuleContexts(FuncDefContext.class);
		}
		public FuncDefContext funcDef(int i) {
			return getRuleContext(FuncDefContext.class,i);
		}
		public List<DeclarationVarContext> declarationVar() {
			return getRuleContexts(DeclarationVarContext.class);
		}
		public DeclarationVarContext declarationVar(int i) {
			return getRuleContext(DeclarationVarContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		 ((ProgramContext)_localctx).value = new Program();
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(40);
				match(T__0);
				setState(44); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(41);
						((ProgramContext)_localctx).dv = declarationVar();
						_localctx.value.addVar(((ProgramContext)_localctx).dv.value);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(46); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			setState(55);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(50);
					((ProgramContext)_localctx).f = funcDef();
					_localctx.value.addFunc(((ProgramContext)_localctx).f.value);
					}
					} 
				}
				setState(57);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(58);
			((ProgramContext)_localctx).i = instruct();
			_localctx.value.addInstruct(((ProgramContext)_localctx).i.value);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDefContext extends ParserRuleContext {
		public FuncDef value;
		public IdContext i;
		public DeclarationVarContext d;
		public TypeContext t;
		public DeclarationVarContext dv;
		public InstructContext in;
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public InstructContext instruct() {
			return getRuleContext(InstructContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<DeclarationVarContext> declarationVar() {
			return getRuleContexts(DeclarationVarContext.class);
		}
		public DeclarationVarContext declarationVar(int i) {
			return getRuleContext(DeclarationVarContext.class,i);
		}
		public FuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).enterFuncDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).exitFuncDef(this);
		}
	}

	public final FuncDefContext funcDef() throws RecognitionException {
		FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funcDef);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			((FuncDefContext)_localctx).i = id();
			((FuncDefContext)_localctx).value = new FuncDef(((FuncDefContext)_localctx).i.value);
			setState(63);
			match(T__1);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFICATEUR) {
				{
				{
				setState(64);
				((FuncDefContext)_localctx).d = declarationVar();
				_localctx.value.addArg(((FuncDefContext)_localctx).d.value);
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(T__2);
			{
			setState(73);
			match(T__3);
			setState(74);
			((FuncDefContext)_localctx).t = type();
			_localctx.value.addType(((FuncDefContext)_localctx).t.value);
			}
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(77);
				match(T__0);
				setState(81); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(78);
						((FuncDefContext)_localctx).dv = declarationVar();
						_localctx.value.addVar(((FuncDefContext)_localctx).dv.value);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(83); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
			}

			setState(87);
			((FuncDefContext)_localctx).in = instruct();
			_localctx.value.addInstruct(((FuncDefContext)_localctx).in.value);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationVarContext extends ParserRuleContext {
		public DeclarationVar value;
		public IdContext i;
		public TypeContext t;
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DeclarationVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).enterDeclarationVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).exitDeclarationVar(this);
		}
	}

	public final DeclarationVarContext declarationVar() throws RecognitionException {
		DeclarationVarContext _localctx = new DeclarationVarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarationVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			((DeclarationVarContext)_localctx).i = id();
			setState(91);
			match(T__3);
			setState(92);
			((DeclarationVarContext)_localctx).t = type();
			((DeclarationVarContext)_localctx).value =  new DeclarationVar(((DeclarationVarContext)_localctx).i.value,((DeclarationVarContext)_localctx).t.value);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type value;
		public TypeContext tempt;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(T__4);
				((TypeContext)_localctx).value = new TypeInt();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				match(T__5);
				((TypeContext)_localctx).value = new TypeBool();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				match(T__6);
				setState(100);
				((TypeContext)_localctx).tempt = type();
				((TypeContext)_localctx).value = new TypeArray(((TypeContext)_localctx).tempt.value);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstanteContext extends ParserRuleContext {
		public Cte value;
		public Token n;
		public Token c;
		public TerminalNode NUMBER() { return getToken(bfParser.NUMBER, 0); }
		public ConstanteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constante; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).enterConstante(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).exitConstante(this);
		}
	}

	public final ConstanteContext constante() throws RecognitionException {
		ConstanteContext _localctx = new ConstanteContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constante);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				((ConstanteContext)_localctx).n = match(NUMBER);
				((ConstanteContext)_localctx).value = new CteInt(Integer.parseInt((((ConstanteContext)_localctx).n!=null?((ConstanteContext)_localctx).n.getText():null)));
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				((ConstanteContext)_localctx).c = match(T__7);
				((ConstanteContext)_localctx).value = new CteBool(Boolean.parseBoolean((((ConstanteContext)_localctx).c!=null?((ConstanteContext)_localctx).c.getText():null)));
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 3);
				{
				setState(109);
				((ConstanteContext)_localctx).c = match(T__8);
				((ConstanteContext)_localctx).value = new CteBool(Boolean.parseBoolean((((ConstanteContext)_localctx).c!=null?((ConstanteContext)_localctx).c.getText():null)));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncNameContext extends ParserRuleContext {
		public FuncName value;
		public IdContext i;
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public FuncNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).enterFuncName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).exitFuncName(this);
		}
	}

	public final FuncNameContext funcName() throws RecognitionException {
		FuncNameContext _localctx = new FuncNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcName);
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(T__9);
				((FuncNameContext)_localctx).value = new FuncName(new ID("read"));
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				match(T__10);
				((FuncNameContext)_localctx).value = new FuncName(new ID("write"));
				}
				break;
			case IDENTIFICATEUR:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				((FuncNameContext)_localctx).i = id();
				((FuncNameContext)_localctx).value = new FuncName(((FuncNameContext)_localctx).i.value);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public ID value;
		public Token ide;
		public TerminalNode IDENTIFICATEUR() { return getToken(bfParser.IDENTIFICATEUR, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).exitId(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			((IdContext)_localctx).ide = match(IDENTIFICATEUR);
			((IdContext)_localctx).value = new ID((((IdContext)_localctx).ide!=null?((IdContext)_localctx).ide.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpreContext extends ParserRuleContext {
		public Expression value;
		public ConstanteContext c;
		public IdContext i;
		public ExprLAContext ela;
		public FuncContext f;
		public AccesTabContext tab;
		public TypeContext t;
		public ExpreContext exp;
		public ConstanteContext constante() {
			return getRuleContext(ConstanteContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ExprLAContext exprLA() {
			return getRuleContext(ExprLAContext.class,0);
		}
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public AccesTabContext accesTab() {
			return getRuleContext(AccesTabContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ExpreContext expre() {
			return getRuleContext(ExpreContext.class,0);
		}
		public ExpreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).enterExpre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).exitExpre(this);
		}
	}

	public final ExpreContext expre() throws RecognitionException {
		ExpreContext _localctx = new ExpreContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expre);
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				((ExpreContext)_localctx).c = constante();
				((ExpreContext)_localctx).value =  ((ExpreContext)_localctx).c.value;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				((ExpreContext)_localctx).i = id();
				((ExpreContext)_localctx).value =  ((ExpreContext)_localctx).i.value;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				((ExpreContext)_localctx).ela = exprLA();
				((ExpreContext)_localctx).value =  ((ExpreContext)_localctx).ela.value;
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				((ExpreContext)_localctx).f = func();
				((ExpreContext)_localctx).value =  ((ExpreContext)_localctx).f.value;
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(137);
				((ExpreContext)_localctx).tab = accesTab();
				((ExpreContext)_localctx).value =  ((ExpreContext)_localctx).tab.value;
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(140);
				match(T__11);
				setState(141);
				((ExpreContext)_localctx).t = type();
				setState(142);
				match(T__12);
				setState(143);
				((ExpreContext)_localctx).exp = expre();
				setState(144);
				match(T__13);
				((ExpreContext)_localctx).value = new NewArrayOf(((ExpreContext)_localctx).t.value,((ExpreContext)_localctx).exp.value);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructContext extends ParserRuleContext {
		public Instruction value;
		public IdContext i;
		public ExpreContext e1;
		public AccesTabContext at;
		public ExpreContext ex;
		public InstructContext i1;
		public InstructContext i2;
		public InstructContext in;
		public ProcedureContext p;
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ExpreContext expre() {
			return getRuleContext(ExpreContext.class,0);
		}
		public AccesTabContext accesTab() {
			return getRuleContext(AccesTabContext.class,0);
		}
		public List<InstructContext> instruct() {
			return getRuleContexts(InstructContext.class);
		}
		public InstructContext instruct(int i) {
			return getRuleContext(InstructContext.class,i);
		}
		public ProcedureContext procedure() {
			return getRuleContext(ProcedureContext.class,0);
		}
		public InstructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).enterInstruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).exitInstruct(this);
		}
	}

	public final InstructContext instruct() throws RecognitionException {
		InstructContext _localctx = new InstructContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_instruct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(149);
				((InstructContext)_localctx).i = id();
				setState(150);
				match(T__14);
				setState(151);
				((InstructContext)_localctx).e1 = expre();
				((InstructContext)_localctx).value = new AffectationVar(((InstructContext)_localctx).i.value,((InstructContext)_localctx).e1.value);
				}
				break;
			case 2:
				{
				setState(154);
				((InstructContext)_localctx).at = accesTab();
				setState(155);
				match(T__14);
				setState(156);
				((InstructContext)_localctx).e1 = expre();
				((InstructContext)_localctx).value = new AffectationTab(((InstructContext)_localctx).at.value,((InstructContext)_localctx).e1.value);
				}
				break;
			case 3:
				{
				setState(159);
				match(T__15);
				setState(160);
				((InstructContext)_localctx).ex = expre();
				setState(161);
				match(T__16);
				setState(162);
				((InstructContext)_localctx).i1 = instruct();
				setState(163);
				match(T__17);
				setState(164);
				((InstructContext)_localctx).i2 = instruct();
				((InstructContext)_localctx).value = new If(((InstructContext)_localctx).ex.value,((InstructContext)_localctx).i1.value,((InstructContext)_localctx).i2.value);
				}
				break;
			case 4:
				{
				setState(167);
				match(T__18);
				setState(168);
				((InstructContext)_localctx).ex = expre();
				setState(169);
				match(T__19);
				setState(170);
				((InstructContext)_localctx).in = instruct();
				((InstructContext)_localctx).value = new While(((InstructContext)_localctx).ex.value,((InstructContext)_localctx).in.value);
				}
				break;
			case 5:
				{
				setState(173);
				match(T__20);
				((InstructContext)_localctx).value = new Skip();
				}
				break;
			case 6:
				{
				setState(175);
				((InstructContext)_localctx).p = procedure();
				((InstructContext)_localctx).value = ((InstructContext)_localctx).p.value;
				}
				break;
			}
			setState(184);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(180);
				match(T__21);
				setState(181);
				((InstructContext)_localctx).in = instruct();
				_localctx.value.addInstruction(((InstructContext)_localctx).in.value);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AccesTabContext extends ParserRuleContext {
		public AccesTab value;
		public IdContext i;
		public FuncContext f;
		public ExpreContext e2;
		public ExpreContext expre() {
			return getRuleContext(ExpreContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public AccesTabContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accesTab; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).enterAccesTab(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bfListener ) ((bfListener)listener).exitAccesTab(this);
		}
	}

	public final AccesTabContext accesTab() throws RecognitionException {
		AccesTabContext _localctx = new AccesTabContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_accesTab);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(186);
				((AccesTabContext)_localctx).i = id();
				((AccesTabContext)_localctx).value = new AccesTabID(((AccesTabContext)_localctx).i.value);
				}
				break;
			case 2:
				{
				setState(189);
				((AccesTabContext)_localctx).f = func();
				((AccesTabContext)_localctx).value = new AccesTabFunc(((AccesTabContext)_localctx).f.value);
				}
				break;
			}
			setState(194);
			match(T__12);
			setState(195);
			((AccesTabContext)_localctx).e2 = expre();
			_localctx.value.addExpression(((AccesTabContext)_localctx).e2.value);
			setState(197);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
